[gd_scene load_steps=20 format=2]

[ext_resource path="res://GUI/GameGui/GameGui.gd" type="Script" id=1]
[ext_resource path="res://GUI/HpBar/HpBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://GUI/HpBar/Progress_Blue.png" type="Texture" id=3]
[ext_resource path="res://GUI/GameGui/Heart.png" type="Texture" id=4]
[ext_resource path="res://GUI/HpText/HpText.tscn" type="PackedScene" id=5]
[ext_resource path="res://Fonts/Font.tres" type="DynamicFont" id=6]
[ext_resource path="res://GUI/HpText/HpText_Extended.gd" type="Script" id=7]
[ext_resource path="res://Entities/Coin/Coin1.png" type="Texture" id=8]
[ext_resource path="res://GUI/HpBar/HpBar_ExpExtended.gd" type="Script" id=9]
[ext_resource path="res://GUI/GameGui/PauseButton.tscn" type="PackedScene" id=10]
[ext_resource path="res://GUI/CollectItemTooltip/TooltipController.tscn" type="PackedScene" id=11]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="Animation" id=2]
resource_name = "Hide"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.406126, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -64, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.482968, 1 ),
"update": 0,
"values": [ Vector2( -128, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "New Anim"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.14 ),
"transitions": PoolRealArray( 0.392292, 2.21914, 1.18921, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 0.9, 0.9 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:custom_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.882353, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ExpText:custom_colors/font_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0.368627, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=10]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ReferenceGui:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ReferenceGui:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PauseButton:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PauseButton:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=11]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ReferenceGui:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ReferenceGui:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PauseButton:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PauseButton:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="GameGui" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 1, 0.981944 )
mouse_filter = 1

[node name="ReferenceGui" type="ReferenceRect" parent="Control"]
margin_left = 16.0
margin_top = 8.0
margin_right = 112.0
margin_bottom = 24.0
border_color = Color( 0.156863, 1, 0, 1 )

[node name="HpBar" parent="Control/ReferenceGui" instance=ExtResource( 2 )]
margin_left = 8.0
margin_top = 8.29421
margin_right = 90.0
margin_bottom = 14.2942

[node name="MpBar" parent="Control/ReferenceGui" instance=ExtResource( 2 )]
visible = false
margin_left = 8.0
margin_top = 10.0
margin_right = 72.0
margin_bottom = 16.0

[node name="HpBar" parent="Control/ReferenceGui/MpBar" index="1"]
texture_progress = ExtResource( 3 )

[node name="HeartTexture" type="TextureRect" parent="Control/ReferenceGui"]
margin_top = 2.0
margin_right = 16.0
margin_bottom = 18.0
texture = ExtResource( 4 )

[node name="HpTextHBox" type="HBoxContainer" parent="Control/ReferenceGui"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -86.0
margin_top = 0.147104
margin_right = -6.0
margin_bottom = 11.1471
custom_constants/separation = 0
alignment = 2

[node name="HpText" parent="Control/ReferenceGui/HpTextHBox" instance=ExtResource( 5 )]
margin_left = 48.0
margin_right = 56.0
margin_bottom = 11.0

[node name="SeperatorText" type="Label" parent="Control/ReferenceGui/HpTextHBox"]
margin_left = 56.0
margin_right = 64.0
margin_bottom = 11.0
custom_fonts/font = ExtResource( 6 )
text = "/"

[node name="MaxHp" type="Label" parent="Control/ReferenceGui/HpTextHBox"]
margin_left = 64.0
margin_right = 80.0
margin_bottom = 11.0
custom_fonts/font = ExtResource( 6 )
text = "30"

[node name="CoinText" parent="Control/ReferenceGui" instance=ExtResource( 5 )]
editor/display_folded = true
anchor_right = 1.0
margin_left = 16.0
margin_top = 24.5884
margin_right = -56.0
margin_bottom = 36.5884
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 0
script = ExtResource( 7 )
offset = Vector2( -80.8347, 0 )

[node name="TextureRect" type="TextureRect" parent="Control/ReferenceGui/CoinText"]
margin_left = -16.0
margin_right = -8.0
margin_bottom = 8.0
texture = SubResource( 1 )

[node name="ShowHidePlayer" type="AnimationPlayer" parent="Control/ReferenceGui/CoinText"]
anims/Hide = SubResource( 2 )
anims/Show = SubResource( 3 )

[node name="WobblePlayer" type="AnimationPlayer" parent="Control/ReferenceGui/CoinText"]
"anims/New Anim" = SubResource( 4 )

[node name="HideTimer" type="Timer" parent="Control/ReferenceGui/CoinText"]
one_shot = true

[node name="ExpBar" parent="Control" instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -80.0
margin_top = -2.00002
margin_right = 80.0
margin_bottom = 3.99998
script = ExtResource( 9 )

[node name="HpBar" parent="Control/ExpBar" index="1"]
texture_progress = ExtResource( 3 )

[node name="HideTimer" type="Timer" parent="Control/ExpBar"]
wait_time = 3.0
one_shot = true

[node name="ExpText" type="Label" parent="Control/ExpBar"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -96.0
margin_top = -8.0
margin_bottom = 4.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "CURRENT/NEXT"
align = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/ExpBar"]
anims/Brightern = SubResource( 8 )
anims/Fade = SubResource( 9 )

[node name="PauseButton" parent="Control" instance=ExtResource( 10 )]
editor/display_folded = false
disabled = true

[node name="ShowHideGuiPlayer" type="AnimationPlayer" parent="Control"]
playback_speed = 2.0
"anims/Hide Gui" = SubResource( 10 )
"anims/Show Gui" = SubResource( 11 )

[node name="TooltipController" parent="Control" instance=ExtResource( 11 )]
margin_top = 57.0297
margin_right = -216.0
margin_bottom = -100.97
[connection signal="pressed" from="Control/PauseButton" to="." method="_on_PauseButton_pressed"]

[editable path="Control/ReferenceGui/MpBar"]

[editable path="Control/ExpBar"]
